rust/hello_world/target/debug/build/crossbeam-utils-d44ec3ea0e9f2bc1/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/zmynz/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3085:1
     |
3085 | / atomic_int! {
3086 | |     cfg(target_has_atomic = "16"),
3087 | |     cfg(target_has_atomic_equal_alignment = "16"),
3088 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3100 | |     u16 AtomicU16
3101 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
